--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Finance Pro</title>
   </head>
-  <body class="h-screen">
+  <body class="bg-stone-100 text-stone-700">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
